04-data-transformation/elt-dbt/lab-tickit/cfn/dbt-redshift.json
{
    "Resources": {
        "personalVpc38CEDDC0": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsHostnames": true,
                "EnableDnsSupport": true,
                "InstanceTenancy": "default",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc"
                    }
                ]
            }
        },
        "personalVpcpublicSubnetSubnet1Subnet4DCAB0EF": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "personalVpc38CEDDC0"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.0.0.0/24",
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "aws-cdk:subnet-name",
                        "Value": "publicSubnet"
                    },
                    {
                        "Key": "aws-cdk:subnet-type",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc/publicSubnetSubnet1"
                    }
                ]
            }
        },
        "personalVpcpublicSubnetSubnet1RouteTable6D0ABD8F": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "personalVpc38CEDDC0"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc/publicSubnetSubnet1"
                    }
                ]
            }
        },
        "personalVpcpublicSubnetSubnet1RouteTableAssociationA0FF007E": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "personalVpcpublicSubnetSubnet1RouteTable6D0ABD8F"
                },
                "SubnetId": {
                    "Ref": "personalVpcpublicSubnetSubnet1Subnet4DCAB0EF"
                }
            }
        },
        "personalVpcpublicSubnetSubnet1DefaultRoute40DCE842": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "personalVpcpublicSubnetSubnet1RouteTable6D0ABD8F"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "personalVpcIGW09F00E45"
                }
            },
            "DependsOn": [
                "personalVpcVPCGWF4A67AF7"
            ]
        },
        "personalVpcpublicSubnetSubnet1EIPF25859D7": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc/publicSubnetSubnet1"
                    }
                ]
            }
        },
        "personalVpcpublicSubnetSubnet1NATGateway2DD2C91F": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "SubnetId": {
                    "Ref": "personalVpcpublicSubnetSubnet1Subnet4DCAB0EF"
                },
                "AllocationId": {
                    "Fn::GetAtt": [
                        "personalVpcpublicSubnetSubnet1EIPF25859D7",
                        "AllocationId"
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc/publicSubnetSubnet1"
                    }
                ]
            }
        },
        "personalVpcpublicSubnetSubnet2Subnet9F5E159E": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "personalVpc38CEDDC0"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.0.1.0/24",
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "aws-cdk:subnet-name",
                        "Value": "publicSubnet"
                    },
                    {
                        "Key": "aws-cdk:subnet-type",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc/publicSubnetSubnet2"
                    }
                ]
            }
        },
        "personalVpcpublicSubnetSubnet2RouteTableB9CC10F9": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "personalVpc38CEDDC0"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc/publicSubnetSubnet2"
                    }
                ]
            }
        },
        "personalVpcpublicSubnetSubnet2RouteTableAssociationF835FEDB": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "personalVpcpublicSubnetSubnet2RouteTableB9CC10F9"
                },
                "SubnetId": {
                    "Ref": "personalVpcpublicSubnetSubnet2Subnet9F5E159E"
                }
            }
        },
        "personalVpcpublicSubnetSubnet2DefaultRouteF2FDAE06": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "personalVpcpublicSubnetSubnet2RouteTableB9CC10F9"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "personalVpcIGW09F00E45"
                }
            },
            "DependsOn": [
                "personalVpcVPCGWF4A67AF7"
            ]
        },
        "personalVpcprivateSubnetSubnet1SubnetBA5A2D72": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "personalVpc38CEDDC0"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.0.2.0/24",
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "aws-cdk:subnet-name",
                        "Value": "privateSubnet"
                    },
                    {
                        "Key": "aws-cdk:subnet-type",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc/privateSubnetSubnet1"
                    }
                ]
            }
        },
        "personalVpcprivateSubnetSubnet1RouteTableC13AD856": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "personalVpc38CEDDC0"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc/privateSubnetSubnet1"
                    }
                ]
            }
        },
        "personalVpcprivateSubnetSubnet1RouteTableAssociationA9225E45": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "personalVpcprivateSubnetSubnet1RouteTableC13AD856"
                },
                "SubnetId": {
                    "Ref": "personalVpcprivateSubnetSubnet1SubnetBA5A2D72"
                }
            }
        },
        "personalVpcprivateSubnetSubnet1DefaultRoute66DA1174": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "personalVpcprivateSubnetSubnet1RouteTableC13AD856"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "personalVpcpublicSubnetSubnet1NATGateway2DD2C91F"
                }
            }
        },
        "personalVpcprivateSubnetSubnet2Subnet427D4344": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "personalVpc38CEDDC0"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.0.3.0/24",
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "aws-cdk:subnet-name",
                        "Value": "privateSubnet"
                    },
                    {
                        "Key": "aws-cdk:subnet-type",
                        "Value": "Private"
                    },
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc/privateSubnetSubnet2"
                    }
                ]
            }
        },
        "personalVpcprivateSubnetSubnet2RouteTable963322FB": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "personalVpc38CEDDC0"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc/privateSubnetSubnet2"
                    }
                ]
            }
        },
        "personalVpcprivateSubnetSubnet2RouteTableAssociation00215528": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "personalVpcprivateSubnetSubnet2RouteTable963322FB"
                },
                "SubnetId": {
                    "Ref": "personalVpcprivateSubnetSubnet2Subnet427D4344"
                }
            }
        },
        "personalVpcprivateSubnetSubnet2DefaultRoute3834382E": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "personalVpcprivateSubnetSubnet2RouteTable963322FB"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "personalVpcpublicSubnetSubnet1NATGateway2DD2C91F"
                }
            }
        },
        "personalVpcIGW09F00E45": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "dbtWorkshopStack/personalVpc"
                    }
                ]
            }
        },
        "personalVpcVPCGWF4A67AF7": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "personalVpc38CEDDC0"
                },
                "InternetGatewayId": {
                    "Ref": "personalVpcIGW09F00E45"
                }
            }
        },
        "RedshiftSecurityGroupCD386564": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "dbtWorkshopStack/RedshiftSecurityGroup",
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "Description": "Allow all outbound traffic by default",
                        "IpProtocol": "-1"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "10.0.0.0/16",
                        "Description": "from 10.0.0.0/16:5439",
                        "FromPort": 5439,
                        "IpProtocol": "tcp",
                        "ToPort": 5439
                    }
                ],
                "VpcId": {
                    "Ref": "personalVpc38CEDDC0"
                }
            }
        },
        "DefaultRedshiftRoleE02A6768": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": "sts:AssumeRole",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "redshift.amazonaws.com"
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "Description": "This role is to be used by the Redshift cluster as it's default role",
                "ManagedPolicyArns": [
                    {
                        "Fn::Join": [
                            "",
                            [
                                "arn:",
                                {
                                    "Ref": "AWS::Partition"
                                },
                                ":iam::aws:policy/AmazonRedshiftDataFullAccess"
                            ]
                        ]
                    }
                ]
            }
        },
        "AccessToTickitSampleData13523133": {
            "Type": "AWS::IAM::Policy",
            "Properties": {
                "PolicyDocument": {
                    "Statement": [
                        {
                            "Action": [
                                "s3:Get*",
                                "s3:List*"
                            ],
                            "Effect": "Allow",
                            "Resource": [
                                "arn:aws:s3:::awssampledbuswest2",
                                "arn:aws:s3:::awssampledbuswest2/*"
                            ]
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "PolicyName": "AccessToTickitSampleData13523133",
                "Roles": [
                    {
                        "Ref": "DefaultRedshiftRoleE02A6768"
                    }
                ]
            }
        },
        "RedshiftClusterSubnetGroup": {
            "Type": "AWS::Redshift::ClusterSubnetGroup",
            "Properties": {
                "Description": "Subnet group used for private Redshift clusters.",
                "SubnetIds": [
                    {
                        "Ref": "personalVpcprivateSubnetSubnet1SubnetBA5A2D72"
                    },
                    {
                        "Ref": "personalVpcprivateSubnetSubnet2Subnet427D4344"
                    }
                ]
            },
            "UpdateReplacePolicy": "Delete",
            "DeletionPolicy": "Delete"
        },
        "dbtRedshiftClusterSecret1B636035": {
            "Type": "AWS::SecretsManager::Secret",
            "Properties": {
                "GenerateSecretString": {
                    "ExcludeCharacters": "\"@/\\ '",
                    "GenerateStringKey": "password",
                    "PasswordLength": 30,
                    "SecretStringTemplate": "{\"username\":\"admin\"}"
                }
            },
            "UpdateReplacePolicy": "Delete",
            "DeletionPolicy": "Delete"
        },
        "dbtRedshiftClusterSecretAttachment63B01FC0": {
            "Type": "AWS::SecretsManager::SecretTargetAttachment",
            "Properties": {
                "SecretId": {
                    "Ref": "dbtRedshiftClusterSecret1B636035"
                },
                "TargetId": {
                    "Ref": "dbtRedshiftClusterA6F1C677"
                },
                "TargetType": "AWS::Redshift::Cluster"
            }
        },
        "dbtRedshiftClusterA6F1C677": {
            "Type": "AWS::Redshift::Cluster",
            "Properties": {
                "ClusterType": "multi-node",
                "DBName": "dev",
                "MasterUsername": {
                    "Fn::Join": [
                        "",
                        [
                            "{{resolve:secretsmanager:",
                            {
                                "Ref": "dbtRedshiftClusterSecret1B636035"
                            },
                            ":SecretString:username::}}"
                        ]
                    ]
                },
                "MasterUserPassword": {
                    "Fn::Join": [
                        "",
                        [
                            "{{resolve:secretsmanager:",
                            {
                                "Ref": "dbtRedshiftClusterSecret1B636035"
                            },
                            ":SecretString:password::}}"
                        ]
                    ]
                },
                "NodeType": "dc2.large",
                "AllowVersionUpgrade": true,
                "AutomatedSnapshotRetentionPeriod": 1,
                "ClusterIdentifier": "dbt-redshift-cluster",
                "ClusterSubnetGroupName": {
                    "Ref": "RedshiftClusterSubnetGroup"
                },
                "Encrypted": true,
                "IamRoles": [
                    {
                        "Fn::GetAtt": [
                            "DefaultRedshiftRoleE02A6768",
                            "Arn"
                        ]
                    }
                ],
                "NumberOfNodes": 2,
                "PubliclyAccessible": false,
                "VpcSecurityGroupIds": [
                    {
                        "Fn::GetAtt": [
                            "RedshiftSecurityGroupCD386564",
                            "GroupId"
                        ]
                    }
                ]
            },
            "UpdateReplacePolicy": "Delete",
            "DeletionPolicy": "Delete"
        },
        "Cloud9EnvD28F4C4F": {
            "Type": "AWS::Cloud9::EnvironmentEC2",
            "Properties": {
                "InstanceType": "t2.micro",
                "ConnectionType": "CONNECT_SSH",
                "SubnetId": {
                    "Ref": "personalVpcpublicSubnetSubnet1Subnet4DCAB0EF"
                },
                "ImageId": "amazonlinux-2-x86_64",
                "OwnerArn": { "Ref" : "Cloud9LoginUser" }
            },
            "UpdateReplacePolicy": "Delete",
            "DeletionPolicy": "Delete"
        },
        "StepFunctionsRole4FE5099D": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "ManagedPolicyArns": ["arn:aws:iam::aws:policy/AmazonRedshiftDataFullAccess"],
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": "sts:AssumeRole",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "states.",
                                            {
                                                "Ref": "AWS::Region"
                                            },
                                            ".amazonaws.com"
                                        ]
                                    ]
                                }
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                }
            }
        },
        "StepFunctionsRoleDefaultPolicy8C8819ED": {
            "Type": "AWS::IAM::Policy",
            "Properties": {
                "PolicyDocument": {
                    "Statement": [
                        {
                            "Action": [
                                "redshift:CancelQuery",
                                "redshift:CancelQuerySession",
                                "redshift:DescribeClusters",
                                "redshift:DescribeQuery",
                                "redshift:DescribeTable",
                                "redshift:ExecuteQuery",
                                "redshift:FetchResults",
                                "redshift:GetClusterCredentials",
                                "redshift:ListDatabases",
                                "redshift:ListSchemas",
                                "redshift:ListTables"
                            ],
                            "Effect": "Allow",
                            "Resource": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "arn:aws:redshift:",
                                        { "Ref" : "AWS::Region" },
                                        ":",
                                        { "Ref" : "AWS::AccountId" },
                                        ":*:",
                                        { "Ref": "dbtRedshiftClusterA6F1C677" },
                                        "*"
                                    ]
                                ]
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "PolicyName": "StepFunctionsRoleDefaultPolicy8C8819ED",
                "Roles": [
                    {
                        "Ref": "StepFunctionsRole4FE5099D"
                    }
                ]
            }
        },
        "StepFunctionsFFB27117": {
            "Type": "AWS::StepFunctions::StateMachine",
            "Properties": {
                "RoleArn": {
                    "Fn::GetAtt": [
                        "StepFunctionsRole4FE5099D",
                        "Arn"
                    ]
                },
                "DefinitionString": {
                    "Fn::Join": [
                        "",
                        [
                            "{\"StartAt\":\"Submit\",\"States\":{\"Submit\":{\"Next\":\"Wait\",\"Type\":\"Task\",\"ResultPath\":\"$.sql_output\",\"Resource\":\"arn:",
                            {
                                "Ref": "AWS::Partition"
                            },
                            ":states:::aws-sdk:redshiftdata:batchExecuteStatement\",\"Parameters\":{\"ClusterIdentifier\":\"",
                            {
                                "Ref": "dbtRedshiftClusterA6F1C677"
                            },
                            "\",\"Database\":\"dev\",\"DbUser\":\"admin\",\"Sqls\":[\"\\n            create table users(\\n                userid integer not null distkey sortkey,\\n                username char(8),\\n                firstname varchar(30),\\n                lastname varchar(30),\\n                city varchar(30),\\n                state char(2),\\n                email varchar(100),\\n                phone char(14),\\n                likesports boolean,\\n                liketh [...]
                            {
                                "Fn::GetAtt": [
                                    "DefaultRedshiftRoleE02A6768",
                                    "Arn"
                                ]
                            },
                            "' \\n            delimiter '|' region 'us-west-2';\\n            \",\"\\n            copy venue from 's3://awssampledbuswest2/tickit/venue_pipe.txt' \\n            iam_role '",
                            {
                                "Fn::GetAtt": [
                                    "DefaultRedshiftRoleE02A6768",
                                    "Arn"
                                ]
                            },
                            "'\\n            delimiter '|' region 'us-west-2';\\n            \",\"\\n            copy category from 's3://awssampledbuswest2/tickit/category_pipe.txt' \\n            iam_role '",
                            {
                                "Fn::GetAtt": [
                                    "DefaultRedshiftRoleE02A6768",
                                    "Arn"
                                ]
                            },
                            "'\\n            delimiter '|' region 'us-west-2';\\n            \",\"\\n            copy date from 's3://awssampledbuswest2/tickit/date2008_pipe.txt' \\n            iam_role '",
                            {
                                "Fn::GetAtt": [
                                    "DefaultRedshiftRoleE02A6768",
                                    "Arn"
                                ]
                            },
                            "'\\n            delimiter '|' region 'us-west-2';\\n            \",\"\\n            copy event from 's3://awssampledbuswest2/tickit/allevents_pipe.txt' \\n            iam_role '",
                            {
                                "Fn::GetAtt": [
                                    "DefaultRedshiftRoleE02A6768",
                                    "Arn"
                                ]
                            },
                            "'\\n            delimiter '|' timeformat 'YYYY-MM-DD HH:MI:SS' region 'us-west-2';\\n            \",\"\\n            copy listing from 's3://awssampledbuswest2/tickit/listings_pipe.txt' \\n            iam_role '",
                            {
                                "Fn::GetAtt": [
                                    "DefaultRedshiftRoleE02A6768",
                                    "Arn"
                                ]
                            },
                            "'\\n            delimiter '|' region 'us-west-2';\\n            \",\"\\n            copy sales from 's3://awssampledbuswest2/tickit/sales_tab.txt'\\n            iam_role '",
                            {
                                "Fn::GetAtt": [
                                    "DefaultRedshiftRoleE02A6768",
                                    "Arn"
                                ]
                            },
                            "'\\n            delimiter '\\t' timeformat 'MM/DD/YYYY HH:MI:SS' region 'us-west-2';\\n            \"],\"StatementName\":\"LoadDatatoRedshift\",\"WithEvent\":true}},\"Wait\":{\"Type\":\"Wait\",\"Seconds\":5,\"Next\":\"Status\"},\"Status\":{\"Next\":\"Complete\",\"Type\":\"Task\",\"ResultPath\":\"$.Result\",\"Resource\":\"arn:",
                            {
                                "Ref": "AWS::Partition"
                            },
                            ":states:::aws-sdk:redshiftdata:describeStatement\",\"Parameters\":{\"Id.$\":\"$.sql_output.Id\"}},\"Complete\":{\"Type\":\"Choice\",\"Choices\":[{\"Variable\":\"$.Result.Status\",\"StringEquals\":\"FAILED\",\"Next\":\"Fail\"},{\"Variable\":\"$.Result.Status\",\"StringEquals\":\"FINISHED\",\"Next\":\"DwhLoaderSuccess\"}],\"Default\":\"Wait\"},\"Fail\":{\"Type\":\"Fail\",\"Error\":\"$.Result.Error\",\"Cause\":\"Redshift Data API statement failed\"},\"DwhLoaderSuccess\" [...]
                        ]
                    ]
                }
            },
            "DependsOn": [
                "StepFunctionsRoleDefaultPolicy8C8819ED",
                "StepFunctionsRole4FE5099D"
            ]
        },
        "awscustomCustomResourcePolicy44EB9363": {
            "Type": "AWS::IAM::Policy",
            "Properties": {
                "PolicyDocument": {
                    "Statement": [
                        {
                            "Action": "states:StartExecution",
                            "Effect": "Allow",
                            "Resource": { "Ref": "StepFunctionsFFB27117" }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "PolicyName": "awscustomCustomResourcePolicy44EB9363",
                "Roles": [
                    {
                        "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2"
                    }
                ]
            }
        },
        "awscustom79CCFF50": {
            "Type": "Custom::AWS",
            "Properties": {
                "ServiceToken": {
                    "Fn::GetAtt": [
                        "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
                        "Arn"
                    ]
                },
                "Create": {
                    "Fn::Join": [
                        "",
                        [
                            "{\"action\":\"startExecution\",\"service\":\"StepFunctions\",\"parameters\":{\"stateMachineArn\":\"",
                            {
                                "Ref": "StepFunctionsFFB27117"
                            },
                            "\"},\"physicalResourceId\":{\"id\":\"physicalResourceStateMachine\"}}"
                        ]
                    ]
                },
                "InstallLatestAwsSdk": true
            },
            "DependsOn": [
                "awscustomCustomResourcePolicy44EB9363"
            ],
            "UpdateReplacePolicy": "Delete",
            "DeletionPolicy": "Delete"
        },
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": "sts:AssumeRole",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "lambda.amazonaws.com"
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "ManagedPolicyArns": [
                    {
                        "Fn::Join": [
                            "",
                            [
                                "arn:",
                                {
                                    "Ref": "AWS::Partition"
                                },
                                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
                            ]
                        ]
                    }
                ]
            }
        },
        "AWS679f53fac002430cb0da5b7982bd22872D164C4C": {
            "Type": "AWS::Lambda::Function",
            "Properties": {
                "Code": {
                    "ZipFile": "\"use strict\";Object.defineProperty(exports,\"__esModule\",{value:!0}),exports.handler=exports.forceSdkInstallation=exports.flatten=exports.PHYSICAL_RESOURCE_ID_REFERENCE=void 0;const child_process_1=require(\"child_process\"),fs=require(\"fs\"),path_1=require(\"path\");exports.PHYSICAL_RESOURCE_ID_REFERENCE=\"PHYSICAL:RESOURCEID:\";function flatten(object){return Object.assign({},...function _flatten(child,path=[]){return[].concat(...Object.keys(child).map(key=> [...]
                },
                "Role": {
                    "Fn::GetAtt": [
                        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
                        "Arn"
                    ]
                },
                "Handler": "index.handler",
                "Runtime": "nodejs12.x",
                "Timeout": 120
            },
            "DependsOn": [
                "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2"
            ]
        }
    },
    "Parameters": {
        "Cloud9LoginUser" : {
            "Type" : "String",
            "Description" : "Enter the ARN of user to log into Cloud9."
        }
    }
}
